Changelog
=========

1.6.5 (unreleased)
------------------

- Nothing changed yet.


1.6.4 (2013-12-27)
------------------

- Fullcalendar 1.6.4
  [thomasdesvenain]


1.6.1 (2013-04-24)
------------------

- Fullcalendar 1.6.1
  [href]

1.5.2.2 (2011-09-22)
--------------------

- Include fullcalendar print css for print media.
  [thomasdesvenain]


1.5.2.1 (2011-08-25)
--------------------

- Disable fullcalendar.min.js compression by resources registry,
  which is compressed by default.
  [thomasdesvenain]


1.5.2 (2011-08-23)
------------------

- Fullcalendar 1.5.2


1.1 (2011-03-28)
----------------

- Fullcalendar 1.5.


1.0 (2010-10-07)
----------------

- Initial release