@@ -16,6 +16,14 @@
       description="jQuery FullCalendar plugin for Plone (http://arshaw.com/fullcalendar/)"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="jQuery FullCalendar plugin (uninstall)"
+      directory="profiles/uninstall"
+      description="Uninstall jQuery FullCalendar plugin for Plone (http://arshaw.com/fullcalendar/)"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
 
     <genericsetup:upgradeStep
         title="Disable compression of fullcalendar.min.js"
