@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+ <stylesheet remove="True" id="++resource++collective.js.fullcalendar/fullcalendar.css"/>
+ <stylesheet remove="True" id="++resource++collective.js.fullcalendar/fullcalendar.print.css"/>
+</object>
