@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+  <javascript remove="True" id="++resource++collective.js.fullcalendar/fullcalendar.min.js"/>
+  <javascript remove="True" id="++resource++collective.js.fullcalendar/fullcalendar.gcal.js"/>
+</object>
