@@ -4,7 +4,8 @@ Changelog
 1.6.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add uninstall profile.
+  [thet]
 
 
 1.6.4 (2013-12-27)
